pre_commit_run_all_files_log.txt
(bsrc-etl-venv) PS C:\Users\B25712\bsrc-etl-venv\bsrc-etl> pre-commit run --all-files
ruff lint................................................................Failed
- hook id: ruff
- exit code: 1

All checks passed!
test\staging\test_extract_non_ssf_data.py:594:5: F841 Local variable `log_config` is assigned to but never used
    |
593 |     # Create log config
594 |     log_config = ProcessLogConfig(
595 |         spark=spark_session,
596 |         run_month=run_month,
    |
    = help: Remove assignment to unused variable `log_config`
595 |         spark=spark_session,
596 |         run_month=run_month,
    |
    = help: Remove assignment to unused variable `log_config`

test\staging\test_extract_non_ssf_data.py:714:5: F841 Local variable `log_config` is assigned to but never used
    |
713 |     # Create log config
714 |     log_config = ProcessLogConfig(
    |     ^^^^^^^^^^ F841
595 |         spark=spark_session,
596 |         run_month=run_month,
    |
    = help: Remove assignment to unused variable `log_config`

test\staging\test_extract_non_ssf_data.py:714:5: F841 Local variable `log_config` is assigned to but never used
    |
713 |     # Create log config
714 |     log_config = ProcessLogConfig(
595 |         spark=spark_session,
596 |         run_month=run_month,
    |
    = help: Remove assignment to unused variable `log_config`

test\staging\test_extract_non_ssf_data.py:714:5: F841 Local variable `log_config` is assigned to but never used
    |
595 |         spark=spark_session,
596 |         run_month=run_month,
    |
    = help: Remove assignment to unused variable `log_config`

test\staging\test_extract_non_ssf_data.py:714:5: F841 Local variable `log_config` is assigned to but never used
596 |         run_month=run_month,
    |
    = help: Remove assignment to unused variable `log_config`

test\staging\test_extract_non_ssf_data.py:714:5: F841 Local variable `log_config` is assigned to but never used
    = help: Remove assignment to unused variable `log_config`

test\staging\test_extract_non_ssf_data.py:714:5: F841 Local variable `log_config` is assigned to but never used

test\staging\test_extract_non_ssf_data.py:714:5: F841 Local variable `log_config` is assigned to but never used
test\staging\test_extract_non_ssf_data.py:714:5: F841 Local variable `log_config` is assigned to but never used
    |
713 |     # Create log config
714 |     log_config = ProcessLogConfig(
    |     ^^^^^^^^^^ F841
715 |         spark=spark_session,
716 |         run_month=run_month,
    |
    = help: Remove assignment to unused variable `log_config`

Found 2 errors.
No fixes available (2 hidden fixes can be enabled with the `--unsafe-fixes` option).
All checks passed!
All checks passed!

ruff format..............................................................Passed
mypy.....................................................................Failed
- hook id: mypy
- exit code: 1

Success: no issues found in 13 source files
Success: no issues found in 13 source files
scripts\nonssf_staging_process.py:295: error: Too many arguments for "check_deadline_violations" of "ExtractNonSSFData"  [call-arg]
Found 1 error in 1 file (checked 13 source files)
Success: no issues found in 13 source files
